# timex

./: .gitignore  README.md  client-info.json  download_harvest.py  generate_invoice.py  generate_summary.py  harvest_reports.py  main.py  pyproject.toml  rate_card.json  render_invoice.py  type-mappings.json  utils.py
docs/superpowers/plans/: 2026-04-06-end-to-end-flow.md  2026-04-06-harvest-reports.md  2026-04-06-invoice-template.md
docs/superpowers/specs/: 2026-04-06-end-to-end-flow-design.md  2026-04-06-harvest-reports-design.md  2026-04-06-invoice-template-design.md
templates/: invoice.html
tests/: test_generate_invoice.py  test_generate_summary.py  test_harvest_reports.py  test_render_invoice.py  test_utils.py
